--- a/html-nodeport.yaml
+++ b/html-nodeport.yaml
@@ -1,10 +1,35 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
-  name: nginx-label
+  name: html-nodeport
 spec:
-  containers:
-    - name: nginx-label
-      image: nginx
-      ports:
-        - containerPort: 80
+  replicas: 2
+  selector:
+    matchLabels:
+      name: html-nodeport
+  template:
+    metadata:
+      name: html-nodeport
+      labels:
+        name: html-nodeport
+    spec:
+      containers:
+        - name : html-nodeport
+          image: musfirotus/html-static:v2
+          ports:
+            - containerPort: 80
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: html-service-nodeport
+spec:
+  type: NodePort
+  selector: 
+    name: html-nodeport
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 30001
